feat: add global error handling
